<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.instaapp.profile.ProfileFragmentViewModel" />

    </data>

    <merge
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">


            <TextView
                android:id="@+id/tvPosts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textPosts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="-8dp"
                android:text="@string/profile_posts_label"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPosts" />

            <TextView
                android:id="@+id/tvFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintLeft_toRightOf="@+id/tvPosts"
                app:layout_constraintRight_toLeftOf="@+id/tvFollowing"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="-8dp"
                android:text="@string/profile_followers_label"
                android:textSize="12sp"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintLeft_toRightOf="@+id/textPosts"
                app:layout_constraintRight_toLeftOf="@+id/textFollolwing"
                app:layout_constraintTop_toBottomOf="@+id/tvFollowers" />

            <TextView
                android:id="@+id/tvFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="-22dp"
                android:layout_marginTop="0dp"
                android:text="@string/profile_following_label"
                android:textSize="12sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFollowing" />

            <TextView
                android:id="@+id/textEditProfile"
                android:layout_width="156dp"
                android:layout_height="18dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/grey_border"
                android:text="@string/profile_edit_label"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFollowers"
                app:layout_constraintVertical_bias="0.0" />
        </android.support.constraint.ConstraintLayout>


    </merge>
</layout>